# chi

./: .clangd  .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  analyzer.gypi  conanfile.txt  install.sh  package-lock.json
analyzer_tests/: 01_incomplete_struct.xs  02_incomplete_function.xc  03_unclosed_braces.xs  04_malformed_generics.xs  05_invalid_expressions.xc  06_broken_imports.xs  06_incomplete_enum.xc  07_invalid_types.xc  08_malformed_lambdas.xc  09_nested_incomplete.xc  11_binary_expr_infinite.xs  13_fn_params_infinite.xc  14_top_level_infinite.xs  17_emptystmt_test.xc  19_struct_implements_hang.xc  21_recovery_incomplete_struct.xc  22_recovery_incomplete_func.xc  23_recovery_broken_statements.xc  25_static_method_errors.xc  26_operator_overload_errors.xs  27_string_method_errors.xs  28_variadic_errors.xs  29_type_symbol_access.xc  30_shared_ref_errors.xs  31_interface_trait_errors.xs  32_monkey_basic.xs  34_monkey_unicode.xc  35_monkey_interspersed.xs  36_monkey_chaos.xs  37_incomplete_arrow_lambda.xs  38_incomplete_generic_type.xs  39_unresolved_implements.xc  42_switch_destructure_chaos.xs  46_try_block_error.xs  48_try_without_catch.xs  Makefile  README.md  fuzz_partial_typing.sh
docker/: gnu.Dockerfile  musl.Dockerfile
docs/: building.md  development.md
src/: CMakeLists.txt  analyzer.cpp  analyzer.h  ast.cpp  ast.h  ast_printer.cpp  ast_printer.h  builder.cpp  builder.h  c_importer.cpp  c_importer.h  chc.cpp  chi.cpp  chic.cpp  cli.cpp  codegen.cpp  codegen.h  compat.h  compiler.cpp  compiler.h  context.cpp  context.h  cx.cpp  embed_file.cmake  error.h  errors.h  flow.h  internals.cpp  internals.h  interpreter.cpp  interpreter.h  jit.cpp  jit.h  lexer.cpp  lexer.h  llvm.h  package.cpp  package.h  package_config.cpp  package_config.h  (+10 more)
src/chi/: main.xs  package.jsonc
src/include/: backward.hpp  enum.h  optional.h  sso23.h  variant.h
src/include/boost/json/: memory_resource.hpp
src/include/boost/json/detail/: config.hpp
src/include/hashdict/: hashdict.c  hashdict.h
src/include/tgc/: tgc.c  tgc.h
src/include/tsl/: hopscotch_growth_policy.h  hopscotch_hash.h  hopscotch_map.h
src/libjit/: .gitignore  CMakeCheckCompilerFeatures.cmake  CMakeLists.txt  config.h.cmake.in
src/libjit/dpas/: .gitignore  Makefile.am  dpas-parser.c  dpas-parser.h  dpas-scanner.c
src/libjit/jit/: Makefile.am  jit-rules-arm.inc  jit-rules-x86-64.inc  jit-rules-x86.inc
src/libjit/tools/: Makefile.am
src/runtime/: format.cpp  format.h  internals.cpp  internals.h  source.h  trace.cpp  trace.h
src/stdlib/: intrinsics.xs  runtime.xc  runtime.xs
src/stdlib/std/: _index.xc  args.xs  atomic.xs  conv.xs  filepath.xs  fs.xs  io.xs  json.xs  lang.xc  math.xs  mem.xc  mem.xs  ops.xc  ops.xs  os.xs  path.xs  pkg.xs  reflect.xs  time.xs
src/support/: CMakeLists.txt
src/support/lsp-binding/: CMakeLists.txt  binding.cpp  binding.gypi
src/support/vscode-binding/: CMakeLists.txt  binding.cpp
src/support/vscode-binding/include/boost/json/detail/: config.hpp
tests/: .gitignore  00_fib.chi  00_fib.cx  00_fib.expect  00_fib.xc  00_fib.xs  01_fib_struct.chi  01_fib_struct.cx  01_fib_struct.expect  01_fib_struct.output  01_fib_struct.xc  01_fib_struct.xs  02_basic_array.chi  02_basic_array.cx  02_basic_array.expect  02_generics.expect  02_generics.xc  02_generics.xs  03_destructors.chi  03_destructors.cx  03_destructors.expect  03_destructors.xc  03_destructors.xs  04_builtins.expect  04_builtins.xc  04_builtins.xs  04_enum_union.chi  04_enum_union.cx  04_enum_union.expect  05_interface.expect  05_interface.xc  05_interface.xs  05_ptr_casting.chi  05_ptr_casting.cx  05_ptr_casting.expect  06_enum.expect  06_enum.xc  06_enum.xs  06_for_loop.chi  06_for_loop.cx  (+179 more)
tests/analyzer/: 09_nested_incomplete.xs  10_invalid_imports.xs  16_expression_stress.xs  18_complex_malformed.xs  20_deep_member_access.xs  24_recovery_mixed_errors.xs  26_operator_overload_errors.xs  30_shared_ref_errors.xs  33_monkey_aggressive.xs  34_monkey_unicode.xs  36_monkey_chaos.xs  40_incomplete_switch.xs  41_enum_value_recovery_chaos.xs  43_async_generic_chaos.xs  44_construct_bound_resolution_error.xs  45_escaped_backslash_newline_string_error.xs  47_try_incomplete_catch.xs  48_embed_uninitialized.xs  49_ref_ownership_widen.xs  Makefile  fuzz_partial_typing.sh
tests/fuzz/: collection_memory_leak_stress.xs  lifecycle_mega_fuzz.expect  lifecycle_mega_fuzz.xs
tests/stress/: collection_memory_leak_stress.expect  lambda_error_recovery_stress.expect  lambda_error_recovery_stress.xs
tests/testdata/: 56_managed_lowlevel_wrapper_array_escape_holder.xs  57_managed_lowlevel_custom_ctor_array_escape_holder.xs  58_managed_lowlevel_custom_ctor_map_escape_holder.xs
tests/testdata/08_module/: _index.xc  greeting.xc  greeting.xs  subgreeting.xc  subgreeting.xs
tests/testdata/13_enum_struct_errors/: 01_non_exhaustive_switch_expr.xs
tests/testdata/15_package/: .gitignore  main.xc  main.xs  notes.txt  package.jsonc
tests/testdata/21_trait_bound_errors/: 01_missing_construct_bound.xc  02_required_ctor_param.xc  02_required_ctor_param.xs  03_partial_default_ctor.xc  03_partial_default_ctor.xs  04_unsatisfied_multi_bound.xc  04_unsatisfied_multi_bound.xs  05_custom_ctor_iface_wrong_type.xc  05_custom_ctor_iface_wrong_type.xs  06_custom_ctor_iface_too_few_params.xc  06_custom_ctor_iface_too_few_params.xs  07_trait_method_as_value.xs  08_trait_method_as_value_eq.xs  09_embed_override_invalidates_iface.xs  09_embed_override_wrong_iface_signature.xs  10_disallow_copy.xs  10_nocopy.xs  11_disallow_copy_assign.xs  11_nocopy_assign.xs  12_disallow_copy_param.xs  12_nocopy_param.xs  13_disallow_copy_type_arg.xs  13_nocopy_type_arg.xs  14_nocopy_optional_to_any_cast.xs  15_immutable_generic_ref_display.xs  16_void_type_arg_requires_unsized.xs
tests/testdata/28_global_let/: constants.xc  constants.xs
tests/testdata/30_safe_errors/: 01_return_ref_to_local.xc  01_return_ref_to_local.xs  02_store_without_lifetime.xc  02_store_without_lifetime.xs  03_return_struct_with_local.xc  (+195 more)
(+74 files in other folders)
